# tp_grupal_taller

./: .girignore  .gitignore  Cargo.toml  README.md  aaaaa.txt  archivezco.txt  bbbbb.txt  ccccc.txt  gir  log.txt  server_logger.txt  test_file.txt
gir/gir/: archivezco.txt
gir2/: archivezco.txt  archivo_otro_repo
src/: 00_server.rs  CONFIG  comando.rs  comando_base.rs  command.rs  comunicacion.rs  err_comunicacion.rs  git_fs.rs  glade1.glade  glade1.glade~  gui.rs  init_command.rs  io.rs  lib.rs  logger.rs  main.rs  packfile.rs  receive_pack.rs  server.rs  servidor_gir.rs  unknown_command.rs  upload_pack.rs  utilidades_de_compresion.rs  utilidades_index.rs  utilidades_path_buf.rs  utilidades_strings.rs  version_command.rs
src/gui/: #glade1.glade#  branch_dialog.rs  branch_selector.rs  check_ignore_button.rs  clone_dialog.rs  comando_gui.rs  conflicts_modal.rs  error_dialog.rs  estilos.css  glade1.glade  glade1.glade~  glade1_old.glade  log_list.rs  log_seleccionado.rs  ls_tree_button.rs  mod.rs  new_branch_dialog.rs  new_commit_dialog.rs  pull_button.rs  push_button.rs  refresh.rs  remote_button.rs  staging_area.rs  tag_list.rs
src/servidor/: gir_server.rs  http_server.rs  mod.rs  pull_request.rs  receive_pack.rs  repo_storage.rs  server.rs  servidor_gir.rs  upload_pack.rs
src/tipos_de_dato/: comando.rs  comunicacion.rs  config.rs  date.rs  error_http.rs  estado_http.rs  git_comando.rs  http_request.rs  http_response.rs  logger.rs  mensajes_log.rs  metodos_http.rs  objeto.rs  packfile.rs  referencia.rs  region.rs  (+6 more)
tests/: tests_integracion.rs
~/: .girconfig
(+63 files in other folders)
