[package]
name = "gir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
flate2 = "1.0.28"
sha1 = "0.10.6"


[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/00_server.rs"
